--- a/AOS/app/build.gradle
+++ b/AOS/app/build.gradle
@@ -61,7 +61,7 @@ dependencies {
 
     // FCM
     implementation platform('com.google.firebase:firebase-bom:26.3.0')
-    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+//    implementation 'com.google.firebase:firebase-crashlytics-ktx'
 
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
     implementation 'com.google.firebase:firebase-messaging:20.1.0'
@@ -70,4 +70,7 @@ dependencies {
 
     implementation 'com.github.nguyenhoanglam:ImagePicker:1.4.3'
     implementation 'com.droidninja:filepicker:2.2.4'
+
+    implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
+    implementation 'com.google.zxing:core:3.3.0'
 }
