--- a/AOS/app/src/main/AndroidManifest.xml
+++ b/AOS/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        tools:replace="android:supportsRtl"
         android:requestLegacyExternalStorage="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:usesCleartextTraffic="true"
@@ -54,6 +55,7 @@
             tools:ignore="LockedOrientationActivity"/>
         <activity android:name=".ui.activity.QRscenActivity" android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"/>
+        <activity android:name=".ui.activity.SignActivity"/>
 
         <service
             android:name=".fcm.MyFirebaseMessagingService"
