[AOS 개발] 카메라 기능 개선

--- a/AOS/app/build.gradle
+++ b/AOS/app/build.gradle
@@ -73,4 +73,7 @@ dependencies {
 
     implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
     implementation 'com.google.zxing:core:3.3.0'
+
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    implementation "com.github.pedroSG94:AutoPermissions:1.0.3"
 }
