--- a/AOS/app/src/main/AndroidManifest.xml
+++ b/AOS/app/src/main/AndroidManifest.xml
@@ -55,6 +55,8 @@
             tools:ignore="LockedOrientationActivity"/>
         <activity android:name=".ui.activity.QRscenActivity" android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"/>
+        <activity android:name=".ui.activity.CameraActivity" android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
         <activity android:name=".ui.activity.SignActivity"/>
 
         <service
